--- a/distro/debian/dms/debian/rules
+++ b/distro/debian/dms/debian/rules
@@ -36,17 +36,19 @@ override_dh_auto_build:
 	fi
 	chmod +x dms
 
+	# Extract source if needed
 	if [ ! -d DankMaterialShell-$(UPSTREAM_VERSION) ]; then \
 		if [ -f ../SOURCES/dms-source.tar.gz ]; then \
 			tar -xzf ../SOURCES/dms-source.tar.gz; \
 		elif [ -f dms-source.tar.gz ]; then \
 			tar -xzf dms-source.tar.gz; \
 		fi; \
-		SOURCE_DIR=$$(find . -maxdepth 1 -type d -name "DankMaterialShell-*" ! -name "DankMaterialShell-$(UPSTREAM_VERSION)" | head -n1); \
-		if [ -n "$$SOURCE_DIR" ] && [ "$$SOURCE_DIR" != "./DankMaterialShell-$(UPSTREAM_VERSION)" ]; then \
-			echo "Renaming $$SOURCE_DIR to DankMaterialShell-$(UPSTREAM_VERSION)"; \
-			mv "$$SOURCE_DIR" DankMaterialShell-$(UPSTREAM_VERSION); \
-		fi; \
+	fi
+	# Rename directory to match expected version
+	SOURCE_DIR=$$(find . -maxdepth 1 -type d -name "DankMaterialShell-*" ! -name "DankMaterialShell-$(UPSTREAM_VERSION)" | head -n1); \
+	if [ -n "$$SOURCE_DIR" ]; then \
+		echo "Renaming $$SOURCE_DIR to DankMaterialShell-$(UPSTREAM_VERSION)"; \
+		mv "$$SOURCE_DIR" DankMaterialShell-$(UPSTREAM_VERSION); \
 	fi
 
 
@@ -54,13 +56,11 @@ override_dh_auto_install:
 	install -Dm755 dms debian/dms/usr/bin/dms
 
 	mkdir -p debian/dms/usr/share/quickshell/dms debian/dms/usr/lib/systemd/user
-	# Handle directory name mismatch again for install step if needed
-	if [ ! -d DankMaterialShell-$(UPSTREAM_VERSION) ]; then \
-		SOURCE_DIR=$$(find . -maxdepth 1 -type d -name "DankMaterialShell-*" | head -n1); \
-		if [ -n "$$SOURCE_DIR" ]; then \
-			echo "Renaming $$SOURCE_DIR to DankMaterialShell-$(UPSTREAM_VERSION) for install"; \
-			mv "$$SOURCE_DIR" DankMaterialShell-$(UPSTREAM_VERSION); \
-		fi; \
+	# Ensure directory has correct version name for install step
+	SOURCE_DIR=$$(find . -maxdepth 1 -type d -name "DankMaterialShell-*" ! -name "DankMaterialShell-$(UPSTREAM_VERSION)" | head -n1); \
+	if [ -n "$$SOURCE_DIR" ]; then \
+		echo "Renaming $$SOURCE_DIR to DankMaterialShell-$(UPSTREAM_VERSION) for install"; \
+		mv "$$SOURCE_DIR" DankMaterialShell-$(UPSTREAM_VERSION); \
 	fi
 	if [ -d DankMaterialShell-$(UPSTREAM_VERSION) ]; then \
 		cp -r DankMaterialShell-$(UPSTREAM_VERSION)/quickshell/* debian/dms/usr/share/quickshell/dms/; \
