--- a/.github/workflows/run-obs.yml
+++ b/.github/workflows/run-obs.yml
@@ -115,6 +115,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      pull-requests: write
     if: |
       github.event_name == 'workflow_dispatch' ||
       needs.check-updates.outputs.has_updates == 'true'
@@ -124,6 +125,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Determine packages to update
         id: packages
@@ -295,34 +297,58 @@ jobs:
             bash distro/scripts/obs-upload.sh "$PACKAGES" "$MESSAGE"
           fi
 
-      - name: Commit changelog and spec updates
+      - name: Get changed packages
+        id: changed-packages
         run: |
-          # Configure git user for commits
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          
           # Check if there are any changes to commit
           if git diff --exit-code distro/debian/ distro/opensuse/ >/dev/null 2>&1; then
+            echo "has_changes=false" >> $GITHUB_OUTPUT
             echo "📋 No changelog or spec changes to commit"
           else
+            echo "has_changes=true" >> $GITHUB_OUTPUT
             # Get list of changed packages for commit message
             CHANGED_DEB=$(git diff --name-only distro/debian/ 2>/dev/null | grep 'debian/changelog' | xargs dirname 2>/dev/null | xargs dirname 2>/dev/null | xargs basename 2>/dev/null | tr '\n' ', ' | sed 's/, $//' || echo "")
             CHANGED_SUSE=$(git diff --name-only distro/opensuse/ 2>/dev/null | grep '\.spec$' | sed 's|distro/opensuse/||' | sed 's/\.spec$//' | tr '\n' ', ' | sed 's/, $//' || echo "")
             
-            CHANGED=""
-            [ -n "$CHANGED_DEB" ] && CHANGED="Debian: $CHANGED_DEB"
-            [ -n "$CHANGED_SUSE" ] && [ -n "$CHANGED" ] && CHANGED="$CHANGED | "
-            [ -n "$CHANGED_SUSE" ] && CHANGED="${CHANGED}OpenSUSE: $CHANGED_SUSE"
-            
             PKGS=$(echo "$CHANGED_DEB,$CHANGED_SUSE" | tr ',' '\n' | grep -v '^$' | sort -u | tr '\n' ',' | sed 's/,$//')
-            
-            echo "📋 Committing changelog and spec updates for: $PKGS"
-            
-            git add distro/debian/ distro/opensuse/
-            git commit -m "ci: Auto-update OBS packages [$PKGS]" -m "🤖 Automated by GitHub Actions"
-            
-            git push
+            echo "packages=$PKGS" >> $GITHUB_OUTPUT
+            echo "📋 Changed packages: $PKGS"
           fi
+
+      - name: Prepare PR body
+        if: steps.changed-packages.outputs.has_changes == 'true'
+        id: pr-body
+        run: |
+          {
+            echo 'body<<EOF'
+            echo '🤖 Automated by GitHub Actions'
+            echo ''
+            echo 'This PR updates packaging files for OBS packages:'
+            echo "- **Packages**: ${{ steps.changed-packages.outputs.packages }}"
+            if [[ -n "${{ steps.packages.outputs.version }}" ]]; then
+              echo "- **Version**: ${{ steps.packages.outputs.version }}"
+            fi
+            echo ''
+            echo 'Please review and merge to update the packaging files.'
+            echo 'EOF'
+          } >> $GITHUB_OUTPUT
+
+      - name: Create Pull Request
+        if: steps.changed-packages.outputs.has_changes == 'true'
+        uses: peter-evans/create-pull-request@v7
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "ci: Auto-update OBS packages [${{ steps.changed-packages.outputs.packages }}]"
+          title: "ci: Auto-update OBS packages [${{ steps.changed-packages.outputs.packages }}]"
+          body: ${{ steps.pr-body.outputs.body }}
+          branch: ci/obs-package-update
+          delete-branch: true
+          labels: |
+            automated
+            ci
+          path: |
+            distro/debian/
+            distro/opensuse/
 
       - name: Summary
         run: |
