--- a/.github/workflows/run-obs.yml
+++ b/.github/workflows/run-obs.yml
@@ -315,40 +315,14 @@ jobs:
             echo "📋 Changed packages: $PKGS"
           fi
 
-      - name: Prepare PR body
+      - name: Commit packaging changes
         if: steps.changed-packages.outputs.has_changes == 'true'
-        id: pr-body
         run: |
-          {
-            echo 'body<<EOF'
-            echo '🤖 Automated by GitHub Actions'
-            echo ''
-            echo 'This PR updates packaging files for OBS packages:'
-            echo "- **Packages**: ${{ steps.changed-packages.outputs.packages }}"
-            if [[ -n "${{ steps.packages.outputs.version }}" ]]; then
-              echo "- **Version**: ${{ steps.packages.outputs.version }}"
-            fi
-            echo ''
-            echo 'Please review and merge to update the packaging files.'
-            echo 'EOF'
-          } >> $GITHUB_OUTPUT
-
-      - name: Create Pull Request
-        if: steps.changed-packages.outputs.has_changes == 'true'
-        uses: peter-evans/create-pull-request@v7
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: |
-            ci: Auto-update OBS packages [${{ steps.changed-packages.outputs.packages }}]
-
-            🤖 Automated by GitHub Actions
-          title: "ci: Auto-update OBS packages [${{ steps.changed-packages.outputs.packages }}]"
-          body: ${{ steps.pr-body.outputs.body }}
-          branch: ci/obs-package-update
-          delete-branch: true
-          labels: |
-            automated
-            ci
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add distro/debian/*/debian/changelog distro/opensuse/*.spec
+          git commit -m "ci: Auto-update OBS packages [${{ steps.changed-packages.outputs.packages }}]" -m "🤖 Automated by GitHub Actions"
+          git push
 
       - name: Summary
         run: |
