--- a/core/.pre-commit-config.yaml
+++ b/core/.pre-commit-config.yaml
@@ -2,6 +2,15 @@ repos:
   - repo: https://github.com/golangci/golangci-lint
     rev: v2.6.2
     hooks:
-      - id: golangci-lint-full
       - id: golangci-lint-fmt
+        require_serial: true
+      - id: golangci-lint-full
       - id: golangci-lint-config-verify
+  - repo: local
+    hooks:
+      - id: go-test
+        name: go test
+        entry: go test ./...
+        language: system
+        pass_filenames: false
+        types: [go]
